Opened 8 years ago
Closed 8 years ago
#13091 closed bug (fixed)
Media preflet crash
Reported by: | dstritt | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | - General | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
hrev50708 gcc2h
If I open Media preferences, click the "MIDI" option, it shows an empty list box (as it should). When I double click inside that box (left or right click) the window crashes. Syslog attached if you need it.
Attachments (1)
Change History (2)
by , 8 years ago
comment:1 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev50710. Thanks for reporting!