Media prefs: fix crash in empty MIDI soundfont list

Check if soundfont list is empty or we crash when double-clicking
into the list.

Fixes #13091.